<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/title_name"
        android:gravity="center"
        android:textColor="#FFFF00"
        android:background="#009966"
        android:textSize="25dp"
        />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       >
       <TextView
           android:id="@+id/lbName"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lbFullname"
           android:textSize="20dp"
           />

       <EditText
           android:id="@+id/edtName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="30dp"
           tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
           />
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/lbCM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_CMND"
            android:textSize="20dp"
            />

        <EditText
            android:id="@+id/edtCM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:text="@string/text_BCap"
        android:gravity="center"
        android:textColor="#FFFF00"
        android:background="#1E90FF"
        android:textSize="20dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/group"
        >

        <RadioButton
            android:id="@+id/rdTrungCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_TCap"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rdCaoDang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/text_CDang"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/rdDaiHoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/text_DHoc"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:text="@string/text_Sothich"
        android:gravity="center"
        android:textColor="#FFFF00"
        android:background="#1E90FF"
        android:textSize="20dp"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/cbDocBao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_DBao"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/cbDocSach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/text_DSach"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />

        <CheckBox
            android:id="@+id/cbDocCoding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_CDing"
            android:textSize="20dp"
            tools:ignore="TouchTargetSizeCheck" />
    </CheckBox>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:text="@string/text_TTBS"
        android:gravity="center"
        android:textColor="#FFFF00"
        android:background="#1E90FF"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/edtTTBSung"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
        />

    <Button
        android:id="@+id/btnGui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_Send"
        android:layout_gravity="center"
        />
</LinearLayout>